// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup.Radio /> snapshot checked 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  className="RadioButton__Wrapper-sc-1q7g63p-2"
>
  <label
    checked={true}
    className="c0"
    disabled={false}
    htmlFor="radio-button-1"
    size="medium"
  >
    <input
      checked={true}
      className="c1"
      disabled={false}
      id="radio-button-1"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot children 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  className="RadioButton__Wrapper-sc-1q7g63p-2"
>
  <label
    checked={false}
    className="c0"
    disabled={false}
    htmlFor="radio-button-7"
    size="medium"
  >
    <input
      checked={false}
      className="c1"
      disabled={false}
      id="radio-button-7"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot disabled 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-left: 8px;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  className="RadioButton__Wrapper-sc-1q7g63p-2"
>
  <label
    checked={false}
    className="c0"
    disabled={true}
    htmlFor="radio-button-4"
    size="medium"
  >
    <input
      checked={false}
      className="c1"
      disabled={true}
      id="radio-button-4"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    Foo
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root c2"
      data-qtm-preloader="icon"
      focusable="false"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#fff5f5",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "components": Object {
            "button": Object {
              "skins": Object {
                "error": Object {
                  "mainColor": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "neutral": Object {
                  "mainColor": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "primary": Object {
                  "mainColor": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "secondary": Object {
                  "mainColor": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "success": Object {
                  "mainColor": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "warning": Object {
                  "mainColor": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
              },
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
      />
    </svg>
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot disabled with an error 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-left: 8px;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  className="RadioButton__Wrapper-sc-1q7g63p-2"
>
  <label
    checked={false}
    className="c0"
    disabled={true}
    htmlFor="radio-button-6"
    size="medium"
  >
    <input
      checked={false}
      className="c1"
      disabled={true}
      id="radio-button-6"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    Foo
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root c2"
      data-qtm-preloader="icon"
      focusable="false"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#fff5f5",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "components": Object {
            "button": Object {
              "skins": Object {
                "error": Object {
                  "mainColor": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "neutral": Object {
                  "mainColor": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "primary": Object {
                  "mainColor": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "secondary": Object {
                  "mainColor": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "success": Object {
                  "mainColor": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "warning": Object {
                  "mainColor": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
              },
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
      />
    </svg>
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot error 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  className="RadioButton__Wrapper-sc-1q7g63p-2"
>
  <label
    checked={false}
    className="c0"
    disabled={false}
    htmlFor="radio-button-5"
    size="medium"
  >
    <input
      checked={false}
      className="c1"
      disabled={false}
      id="radio-button-5"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot icon 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-right: 8px;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  className="RadioButton__Wrapper-sc-1q7g63p-2"
>
  <label
    checked={false}
    className="c0"
    disabled={false}
    htmlFor="radio-button-3"
    size="medium"
  >
    <input
      checked={false}
      className="c1"
      disabled={false}
      id="radio-button-3"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root c2"
      data-qtm-preloader="icon"
      focusable="false"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      theme={
        Object {
          "baseFontSize": 16,
          "colors": Object {
            "error": Object {
              "100": "#fff5f5",
              "300": "#f88e86",
              "500": "#ec584e",
              "700": "#e91b0c",
              "900": "#ac001a",
            },
            "neutral": Object {
              "0": "#ffffff",
              "100": "#f2f2f2",
              "1000": "#000000",
              "300": "#e0e0e0",
              "500": "#999999",
              "700": "#424242",
              "900": "#191919",
            },
            "primary": Object {
              "100": "#E5EDFC",
              "300": "#89AAE7",
              "500": "#0CC0EA",
              "700": "#1250C4",
              "900": "#002F7B",
            },
            "secondary": Object {
              "100": "#F7B0C8",
              "300": "#F278A1",
              "500": "#E91E63",
              "700": "#DE0059",
              "900": "#9E003F",
            },
            "success": Object {
              "100": "#dcedc8",
              "300": "#c9eda2",
              "500": "#7ed321",
              "700": "#3b610f",
              "900": "#004D40",
            },
            "warning": Object {
              "100": "#ffefd6",
              "300": "#ffda6a",
              "500": "#ffc107",
              "700": "#f09100",
              "900": "#d14900",
            },
          },
          "components": Object {
            "button": Object {
              "skins": Object {
                "error": Object {
                  "mainColor": Object {
                    "100": "#fff5f5",
                    "300": "#f88e86",
                    "500": "#ec584e",
                    "700": "#e91b0c",
                    "900": "#ac001a",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "neutral": Object {
                  "mainColor": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "primary": Object {
                  "mainColor": Object {
                    "100": "#E5EDFC",
                    "300": "#89AAE7",
                    "500": "#0CC0EA",
                    "700": "#1250C4",
                    "900": "#002F7B",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "secondary": Object {
                  "mainColor": Object {
                    "100": "#F7B0C8",
                    "300": "#F278A1",
                    "500": "#E91E63",
                    "700": "#DE0059",
                    "900": "#9E003F",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "success": Object {
                  "mainColor": Object {
                    "100": "#dcedc8",
                    "300": "#c9eda2",
                    "500": "#7ed321",
                    "700": "#3b610f",
                    "900": "#004D40",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
                "warning": Object {
                  "mainColor": Object {
                    "100": "#ffefd6",
                    "300": "#ffda6a",
                    "500": "#ffc107",
                    "700": "#f09100",
                    "900": "#d14900",
                  },
                  "text": Object {
                    "0": "#ffffff",
                    "100": "#f2f2f2",
                    "1000": "#000000",
                    "300": "#e0e0e0",
                    "500": "#999999",
                    "700": "#424242",
                    "900": "#191919",
                  },
                },
              },
            },
          },
          "spacing": Object {
            "large": 24,
            "medium": 16,
            "small": 12,
            "xlarge": 32,
            "xsmall": 8,
            "xxlarge": 40,
            "xxsmall": 4,
            "xxxlarge": 48,
            "xxxsmall": 2,
          },
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot inline 1`] = `
.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: inline-block;
  margin-right: 16px;
  vertical-align: top;
}

.c0:last-child {
  margin-right: 0;
}

.c1 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  className="c0"
>
  <label
    checked={false}
    className="c1"
    disabled={false}
    htmlFor="radio-button-2"
    size="medium"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="radio-button-2"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    Foo
  </label>
</div>
`;

exports[`<RadioGroup.Radio /> snapshot simple 1`] = `
.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<div
  className="RadioButton__Wrapper-sc-1q7g63p-2"
>
  <label
    checked={false}
    className="c0"
    disabled={false}
    htmlFor="radio-button-0"
    size="medium"
  >
    <input
      checked={false}
      className="c1"
      disabled={false}
      id="radio-button-0"
      onChange={[Function]}
      type="radio"
      value="Foo"
    />
    Foo
  </label>
</div>
`;
